--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
         <div id="status" class="status disconnected">
           Connecting
         </div>
+        <div id="stream-timer" class="stream-timer"></div>
       </header>
 
       <main>
