--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 
       <main>
         <div id="cue-display" class="cue-display"></div>
+        <div id="pause-status" class="pause-status"></div>
       </main>
 
       <footer>
@@ -28,7 +29,9 @@
           <textarea
             id="message-input"
             placeholder="e.g., A gentle 10 minute morning stretch"
-          ></textarea>
+          >
+simple gratitude meditation</textarea
+          >
           <button type="submit" id="send-btn">Begin</button>
         </form>
         <audio id="audio-player" preload="none"></audio>
