--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,7 @@
           <textarea
             id="message-input"
             placeholder="e.g., A gentle 10 minute morning stretch"
-          >
-simple gratitude meditation</textarea
-          >
+          ></textarea>
           <button type="submit" id="send-btn">Begin</button>
         </form>
         <audio id="audio-player" preload="none"></audio>
