--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,12 @@
 
       <footer>
         <form id="chat-form" class="chat-form">
-          <textarea
-            id="message-input"
-            placeholder="e.g., A gentle 10 minute morning stretch"
-          ></textarea>
+          <div class="grow-wrap">
+            <textarea
+              id="message-input"
+              placeholder="e.g., A gentle 10 minute morning stretch"
+            ></textarea>
+          </div>
           <button type="submit" id="send-btn">Begin</button>
         </form>
         <audio id="audio-player" preload="none"></audio>
