--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <div id="connection-indicator" class="connection-indicator disconnected"></div>
       </div>
       <header>
-        <h1 id="persona-name">guru</h1>
+        <h1>guru</h1>
         <p id="persona-description" class="persona-description"></p>
       </header>
 
