--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,17 @@
     <div class="container">
       <div class="status-bar">
         <div id="stream-timer" class="stream-timer"></div>
-        <div id="connection-indicator" class="connection-indicator disconnected"></div>
+        <div
+          id="connection-indicator"
+          class="connection-indicator disconnected"
+        ></div>
       </div>
       <header>
         <h1>guru</h1>
-        <p id="persona-description" class="persona-description"></p>
+        <p
+          id="persona-description"
+          class="persona-description"
+        ></p>
       </header>
 
       <main>
@@ -28,10 +34,7 @@
       <footer>
         <form id="chat-form" class="chat-form">
           <div class="grow-wrap">
-            <textarea
-              id="message-input"
-              placeholder="e.g., A gentle 10 minute morning stretch"
-            ></textarea>
+            <textarea id="message-input"></textarea>
           </div>
           <button type="submit" id="send-btn">Begin</button>
         </form>
