--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
       </main>
 
       <footer>
+        <div id="example-chiclets" class="example-chiclets"></div>
         <form id="chat-form" class="chat-form">
           <div class="grow-wrap">
             <textarea id="message-input"></textarea>
