--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,13 @@
       </div>
       <header>
         <h1>guru</h1>
-        <p
+        <details
           id="persona-description"
           class="persona-description"
-        ></p>
+        >
+          <summary>persona</summary>
+          <p id="persona-description-text"></p>
+        </details>
       </header>
 
       <main>
@@ -32,7 +35,10 @@
       </main>
 
       <footer>
-        <div id="example-chiclets" class="example-chiclets"></div>
+        <div
+          id="example-chiclets"
+          class="example-chiclets"
+        ></div>
         <form id="chat-form" class="chat-form">
           <div class="grow-wrap">
             <textarea id="message-input"></textarea>
