--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         <details
           id="persona-description"
           class="persona-description"
+          open
         >
           <summary>persona</summary>
           <p id="persona-description-text"></p>
