--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,15 @@
       </main>
 
       <footer>
+        <label class="toggle-switch">
+          <input
+            type="checkbox"
+            id="living-instructions-toggle"
+            checked
+          />
+          <span class="toggle-slider"></span>
+          <span class="toggle-label">Living instructions</span>
+        </label>
         <div
           id="example-chiclets"
           class="example-chiclets"
