--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
             checked
           />
           <span class="toggle-slider"></span>
-          <span class="toggle-label">Living instructions</span>
+          <span class="toggle-label">Living instruction</span>
         </label>
         <div
           id="example-chiclets"
