--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,11 @@
         <h1>guru</h1>
       </header>
 
+      <details id="thinking-trace" class="thinking-trace">
+        <summary>thinking trace</summary>
+        <pre id="thinking-content"></pre>
+      </details>
+
       <main>
         <div id="cue-display" class="cue-display"></div>
         <div id="pause-status" class="pause-status"></div>
