--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="guru" />
     <meta property="og:description" content="breathe with the machine" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="__OG_IMAGE_URL__" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="guru" />
     <meta name="twitter:description" content="breathe with the machine" />
-    <meta name="twitter:image" content="/og-image.png" />
+    <meta name="twitter:image" content="__OG_IMAGE_URL__" />
 
     <link
       rel="icon"
