--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
     <!-- Open Graph / Social Sharing -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="guru" />
-    <meta property="og:description" content="breathe with the machine" />
+    <meta
+      property="og:description"
+      content="breathe with the machine"
+    />
     <meta property="og:image" content="__OG_IMAGE_URL__" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -19,7 +22,10 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="guru" />
-    <meta name="twitter:description" content="breathe with the machine" />
+    <meta
+      name="twitter:description"
+      content="breathe with the machine"
+    />
     <meta name="twitter:image" content="__OG_IMAGE_URL__" />
 
     <link
@@ -59,7 +65,7 @@
             checked
           />
           <span class="toggle-slider"></span>
-          <span class="toggle-label">Living instruction</span>
+          <span class="toggle-label">Living instruction 🌀</span>
         </label>
         <div
           id="example-chiclets"
