--- a/public/inspect-session.html
+++ b/public/inspect-session.html
@@ -203,6 +203,29 @@
         color: var(--text-secondary);
       }
 
+      .delete-btn {
+        background: transparent;
+        border: 1px solid var(--accent-error);
+        color: var(--accent-error);
+        padding: 0.375rem 0.75rem;
+        border-radius: 6px;
+        font-size: 0.8125rem;
+        cursor: pointer;
+        transition: all 0.2s ease;
+      }
+
+      .delete-btn:hover {
+        background: var(--accent-error);
+        color: var(--bg-deep);
+      }
+
+      .session-header-row {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        gap: 1rem;
+      }
+
       .seq-badge {
         font-family: monospace;
         font-size: 0.6875rem;
@@ -257,11 +280,16 @@
           });
 
           infoContainer.innerHTML = `
-            <div class="session-id">${session.id}</div>
-            <div class="session-prompt">${escapeHtml(session.initial_prompt || "(no prompt)")}</div>
-            <div class="session-meta">
-              <span>${formatted}</span>
-              <span class="session-status ${session.status}">${session.status}</span>
+            <div class="session-header-row">
+              <div>
+                <div class="session-id">${session.id}</div>
+                <div class="session-prompt">${escapeHtml(session.initial_prompt || "(no prompt)")}</div>
+                <div class="session-meta">
+                  <span>${formatted}</span>
+                  <span class="session-status ${session.status}">${session.status}</span>
+                </div>
+              </div>
+              <button class="delete-btn" onclick="deleteSession()">Delete</button>
             </div>
           `;
 
@@ -314,6 +342,23 @@
         const div = document.createElement("div");
         div.textContent = text;
         return div.innerHTML;
+      }
+
+      async function deleteSession() {
+        if (!confirm("Delete this session?")) return;
+
+        try {
+          const response = await fetch(`/api/inspect/sessions/${sessionId}`, {
+            method: "DELETE",
+          });
+          if (response.ok) {
+            window.location.href = "/inspect";
+          } else {
+            alert("Failed to delete session");
+          }
+        } catch (error) {
+          alert("Error deleting session: " + error.message);
+        }
       }
 
       loadSession();
