--- a/public/inspect.html
+++ b/public/inspect.html
@@ -62,6 +62,35 @@
         border-color: var(--accent-amber);
       }
 
+      .session-row {
+        display: flex;
+        gap: 0.75rem;
+        align-items: flex-start;
+      }
+
+      .session-content {
+        flex: 1;
+        min-width: 0;
+        text-decoration: none;
+      }
+
+      .delete-btn {
+        background: transparent;
+        border: 1px solid var(--border-subtle);
+        color: var(--text-secondary);
+        padding: 0.375rem 0.5rem;
+        border-radius: 6px;
+        font-size: 0.75rem;
+        cursor: pointer;
+        transition: all 0.2s ease;
+        flex-shrink: 0;
+      }
+
+      .delete-btn:hover {
+        border-color: var(--accent-error);
+        color: var(--accent-error);
+      }
+
       .session-prompt {
         color: var(--text-primary);
         font-size: 0.9375rem;
@@ -155,13 +184,16 @@
               const prompt = session.initial_prompt || "(no prompt)";
 
               return `
-              <a href="/inspect/${session.id}" class="session-item">
-                <div class="session-prompt">${escapeHtml(prompt)}</div>
-                <div class="session-meta">
-                  <span>${formatted}</span>
-                  <span class="session-status ${session.status}">${session.status}</span>
-                </div>
-              </a>
+              <div class="session-item session-row">
+                <a href="/inspect/${session.id}" class="session-content">
+                  <div class="session-prompt">${escapeHtml(prompt)}</div>
+                  <div class="session-meta">
+                    <span>${formatted}</span>
+                    <span class="session-status ${session.status}">${session.status}</span>
+                  </div>
+                </a>
+                <button class="delete-btn" onclick="deleteSession('${session.id}', event)">Delete</button>
+              </div>
             `;
             })
             .join("");
@@ -174,6 +206,24 @@
         const div = document.createElement("div");
         div.textContent = text;
         return div.innerHTML;
+      }
+
+      async function deleteSession(sessionId, event) {
+        event.stopPropagation();
+        if (!confirm("Delete this session?")) return;
+
+        try {
+          const response = await fetch(`/api/inspect/sessions/${sessionId}`, {
+            method: "DELETE",
+          });
+          if (response.ok) {
+            loadSessions();
+          } else {
+            alert("Failed to delete session");
+          }
+        } catch (error) {
+          alert("Error deleting session: " + error.message);
+        }
       }
 
       loadSessions();
