--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,9 @@
         ></div>
         <form id="chat-form" class="chat-form">
           <div class="grow-wrap">
-            <textarea id="message-input"></textarea>
+            <textarea id="message-input">
+cue 5 sun salutation As
+            </textarea>
           </div>
           <button type="submit" id="send-btn">Begin</button>
         </form>
