--- a/public/inspect-session.html
+++ b/public/inspect-session.html
@@ -325,7 +325,14 @@
                         <span class="cue-detail-label">voice:</span>
                         <span>${escapeHtml(event.voice)}</span>
                       </div>
-                      ${event.pause ? `<div class="cue-detail"><span class="cue-detail-label">pause:</span><span>${event.pause}</span></div>` : ""}
+                      ${
+                        event.breathPhase !== null &&
+                        event.breathPhase !== undefined
+                          ? `<div class="cue-detail"><span class="cue-detail-label">Breath phase:</span><span>${event.breathPhase.toFixed(1)}</span></div>`
+                          : event.pause
+                            ? `<div class="cue-detail"><span class="cue-detail-label">Pause:</span><span>${event.pause}</span></div>`
+                            : ""
+                      }
                     </div>
                   </div>
                 `;
