--- a/public/index.html
+++ b/public/index.html
@@ -74,8 +74,8 @@
         <form id="chat-form" class="chat-form">
           <div class="grow-wrap">
             <textarea id="message-input">
-cue 5 sun salutation As
-            </textarea>
+cue 5 sun salutation As</textarea
+            >
           </div>
           <button type="submit" id="send-btn">Begin</button>
         </form>
