--- a/public/index.html
+++ b/public/index.html
@@ -73,9 +73,7 @@
         ></div>
         <form id="chat-form" class="chat-form">
           <div class="grow-wrap">
-            <textarea id="message-input">
-cue 5 sun salutation As</textarea
-            >
+            <textarea id="message-input"></textarea>
           </div>
           <button type="submit" id="send-btn">Begin</button>
         </form>
