--- a/public/index.html
+++ b/public/index.html
@@ -66,17 +66,19 @@
               checked
             />
             <span class="toggle-slider"></span>
-            <span class="toggle-label">Living instruction 🌀</span>
+            <span class="toggle-label"
+              >Living instruction 🌀</span
+            >
           </label>
           <label class="stack-control">
             <span class="stack-label">Clairvoyance</span>
             <input
               type="number"
               id="stack-size"
-              min="1"
-              max="6"
+              min="6"
+              max="18"
               step="1"
-              value="1"
+              value="6"
               inputmode="numeric"
               title="Max queued cues"
             />
