--- a/public/inspect-session.html
+++ b/public/inspect-session.html
@@ -169,6 +169,35 @@
         color: var(--text-secondary);
       }
 
+      .event-error {
+        background: rgba(199, 95, 95, 0.1);
+        border: 1px solid var(--accent-error);
+        border-left-width: 3px;
+        padding: 0.75rem 1rem;
+        display: flex;
+        align-items: flex-start;
+        gap: 0.75rem;
+      }
+
+      .error-label {
+        font-size: 0.6875rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        color: var(--accent-error);
+      }
+
+      .error-source {
+        font-family: monospace;
+        font-size: 0.75rem;
+        color: var(--text-secondary);
+      }
+
+      .error-message {
+        color: var(--text-secondary);
+        font-size: 0.875rem;
+      }
+
       .cue-header {
         display: flex;
         align-items: center;
@@ -283,6 +312,53 @@
         padding: 0.125rem 0.375rem;
         border-radius: 4px;
       }
+
+      .queue-badge {
+        font-family: monospace;
+        font-size: 0.625rem;
+        color: var(--accent-amber);
+        background: rgba(212, 168, 83, 0.15);
+        padding: 0.125rem 0.375rem;
+        border-radius: 4px;
+      }
+
+      .event-tool {
+        background: var(--bg-surface);
+        border: 1px solid var(--border-subtle);
+        border-left: 3px solid #8b7ec8;
+        padding: 0.75rem 1rem;
+        display: flex;
+        align-items: center;
+        gap: 0.75rem;
+        flex-wrap: wrap;
+      }
+
+      .tool-label {
+        font-size: 0.6875rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        color: #8b7ec8;
+      }
+
+      .tool-name {
+        font-family: monospace;
+        color: var(--text-secondary);
+      }
+
+      .tool-result {
+        color: var(--text-secondary);
+        font-size: 0.875rem;
+        flex-basis: 100%;
+        margin-top: 0.25rem;
+      }
+
+      .event-meta {
+        font-size: 0.75rem;
+        color: var(--text-secondary);
+        opacity: 0.7;
+        font-family: monospace;
+      }
     </style>
   </head>
   <body>
@@ -345,7 +421,8 @@
             </div>
           `;
 
-          // Store events for copy function
+          // Store session and events for copy function
+          window.sessionData = session;
           window.sessionEvents = events;
 
           // Render timeline
@@ -358,29 +435,69 @@
           timelineContainer.innerHTML = events
             .map((event) => {
               if (event.type === "thinking") {
+                const queueBadge = event.queueDepth != null
+                  ? `<span class="queue-badge">q${event.queueDepth}</span>`
+                  : "";
                 return `
                   <details class="event event-thinking" open>
                     <summary>
                       <span class="seq-badge">${event.sequence_num}</span>
+                      ${queueBadge}
                       thinking
                     </summary>
                     <pre>${escapeHtml(event.content)}</pre>
                   </details>
                 `;
               } else if (event.type === "silence") {
+                const sinceSpeakStr = event.sinceSpeakMs != null
+                  ? ` (${(event.sinceSpeakMs / 1000).toFixed(1)}s since speak)`
+                  : "";
+                const metaStr = event.wallClock ? `@ ${event.wallClock}` : "";
                 return `
                   <div class="event event-silence">
                     <span class="seq-badge">${event.sequence_num}</span>
                     <span class="silence-label">silence</span>
-                    <span class="silence-duration">${(event.durationMs / 1000).toFixed(1)}s</span>
+                    <span class="silence-duration">${(event.durationMs / 1000).toFixed(1)}s${sinceSpeakStr}</span>
+                    ${metaStr ? `<span class="event-meta">${metaStr}</span>` : ""}
+                  </div>
+                `;
+              } else if (event.type === "error") {
+                return `
+                  <div class="event event-error">
+                    <span class="seq-badge">${event.sequence_num}</span>
+                    <span class="error-label">error</span>
+                    <span class="error-source">[${escapeHtml(event.source)}]</span>
+                    <span class="error-message">${escapeHtml(event.message)}</span>
+                  </div>
+                `;
+              } else if (event.type === "tool_call") {
+                const toolDisplay = event.toolName === "stopwatch"
+                  ? `${event.toolName}:${event.intent}${event.stopwatchId ? ` "${event.stopwatchId}"` : ""}`
+                  : event.toolName;
+                return `
+                  <div class="event event-tool">
+                    <span class="seq-badge">${event.sequence_num}</span>
+                    <span class="tool-label">tool</span>
+                    <span class="tool-name">${escapeHtml(toolDisplay)}</span>
+                    <div class="tool-result">${escapeHtml(event.result)}</div>
                   </div>
                 `;
               } else {
+                const queueBadge = event.queueDepth != null
+                  ? `<span class="queue-badge">q${event.queueDepth}</span>`
+                  : "";
+                const speakingStr = event.speakingMs != null
+                  ? `${(event.speakingMs / 1000).toFixed(1)}s`
+                  : "";
+                const metaStr = event.wallClock ? `@ ${event.wallClock}` : "";
                 return `
                   <div class="event event-cue">
                     <div class="cue-header">
                       <span class="cue-label">cue</span>
                       <span class="cue-seq">#${event.sequence_num}</span>
+                      ${queueBadge}
+                      ${speakingStr ? `<span class="event-meta">${speakingStr}</span>` : ""}
+                      ${metaStr ? `<span class="event-meta">${metaStr}</span>` : ""}
                     </div>
                     <div class="cue-text">${escapeHtml(event.text)}</div>
                     <div class="cue-details">
@@ -388,13 +505,6 @@
                         <span class="cue-detail-label">voice:</span>
                         <span>${escapeHtml(event.voice)}</span>
                       </div>
-                      ${
-                        event.waitMs !== null && event.waitMs !== undefined
-                          ? `<div class="cue-detail"><span class="cue-detail-label">Wait:</span><span>${(event.waitMs / 1000).toFixed(1)}s</span></div>`
-                          : event.pause
-                            ? `<div class="cue-detail"><span class="cue-detail-label">Pause:</span><span>${event.pause}</span></div>`
-                            : ""
-                      }
                     </div>
                   </div>
                 `;
@@ -431,23 +541,41 @@
       }
 
       async function copyToClipboard() {
+        const session = window.sessionData;
         const events = window.sessionEvents || [];
 
-        if (events.length === 0) {
+        if (!session) {
           return;
         }
 
-        const formatted = events
+        const date = new Date(session.created_at);
+        const dateFormatted = date.toLocaleDateString("en-US", {
+          month: "short",
+          day: "numeric",
+          year: "numeric",
+          hour: "numeric",
+          minute: "2-digit",
+        });
+
+        const header = `[${dateFormatted}]\n${session.initial_prompt || "(no prompt)"}`;
+
+        const eventsFormatted = events
           .map((e) => {
             if (e.type === "thinking") {
               return `[thinking]\n${e.content}`;
             } else if (e.type === "silence") {
               return `[silence ${(e.durationMs / 1000).toFixed(1)}s]`;
+            } else if (e.type === "error") {
+              return `[error:${e.source}] ${e.message}`;
+            } else if (e.type === "tool_call") {
+              return `[${e.toolName}${e.intent ? ":" + e.intent : ""}] ${e.result}`;
             } else {
               return `[${e.voice}]\n${e.text}`;
             }
           })
           .join("\n\n");
+
+        const formatted = header + (events.length > 0 ? "\n\n" + eventsFormatted : "");
 
         await navigator.clipboard.writeText(formatted);
 
