--- a/public/inspect.html
+++ b/public/inspect.html
@@ -143,6 +143,27 @@
         padding: 3rem 1rem;
         color: var(--text-secondary);
       }
+
+      .search-input {
+        width: 100%;
+        padding: 0.75rem 1rem;
+        background: var(--bg-surface);
+        border: 1px solid var(--border-subtle);
+        border-radius: 8px;
+        color: var(--text-primary);
+        font-size: 0.9375rem;
+        margin-bottom: 1rem;
+        box-sizing: border-box;
+      }
+
+      .search-input::placeholder {
+        color: var(--text-secondary);
+      }
+
+      .search-input:focus {
+        outline: none;
+        border-color: var(--accent-amber);
+      }
     </style>
   </head>
   <body>
@@ -152,54 +173,76 @@
         <a href="/">← back to guru</a>
       </div>
 
+      <input
+        type="text"
+        id="search"
+        class="search-input"
+        placeholder="Search prompts..."
+      />
+
       <div id="session-list" class="session-list">
         <div class="loading">Loading sessions...</div>
       </div>
     </div>
 
     <script>
+      let allSessions = [];
+
       async function loadSessions() {
         const container = document.getElementById("session-list");
 
         try {
           const response = await fetch("/api/inspect/sessions");
-          const sessions = await response.json();
-
-          if (sessions.length === 0) {
-            container.innerHTML =
-              '<div class="empty-state">No sessions yet</div>';
-            return;
-          }
-
-          container.innerHTML = sessions
-            .map((session) => {
-              const date = new Date(session.created_at);
-              const formatted = date.toLocaleDateString("en-US", {
-                month: "short",
-                day: "numeric",
-                hour: "numeric",
-                minute: "2-digit",
-              });
-
-              const prompt = session.initial_prompt || "(no prompt)";
-
-              return `
-              <div class="session-item session-row">
-                <a href="/inspect/${session.id}" class="session-content">
-                  <div class="session-prompt">${escapeHtml(prompt)}</div>
-                  <div class="session-meta">
-                    <span>${formatted}</span>
-                    <span class="session-status ${session.status}">${session.status}</span>
-                  </div>
-                </a>
-                <button class="delete-btn" onclick="deleteSession('${session.id}', event)">Delete</button>
-              </div>
-            `;
-            })
-            .join("");
+          allSessions = await response.json();
+          renderSessions(allSessions);
         } catch (error) {
           container.innerHTML = `<div class="empty-state">Error loading sessions: ${error.message}</div>`;
         }
+      }
+
+      function renderSessions(sessions) {
+        const container = document.getElementById("session-list");
+
+        if (sessions.length === 0) {
+          container.innerHTML =
+            '<div class="empty-state">No sessions found</div>';
+          return;
+        }
+
+        container.innerHTML = sessions
+          .map((session) => {
+            const date = new Date(session.created_at);
+            const formatted = date.toLocaleDateString("en-US", {
+              month: "short",
+              day: "numeric",
+              hour: "numeric",
+              minute: "2-digit",
+            });
+
+            const prompt = session.initial_prompt || "(no prompt)";
+
+            return `
+            <div class="session-item session-row">
+              <a href="/inspect/${session.id}" class="session-content">
+                <div class="session-prompt">${escapeHtml(prompt)}</div>
+                <div class="session-meta">
+                  <span>${formatted}</span>
+                  <span class="session-status ${session.status}">${session.status}</span>
+                </div>
+              </a>
+              <button class="delete-btn" onclick="deleteSession('${session.id}', event)">Delete</button>
+            </div>
+          `;
+          })
+          .join("");
+      }
+
+      function filterSessions(query) {
+        const q = query.toLowerCase();
+        const filtered = allSessions.filter((s) =>
+          (s.initial_prompt || "").toLowerCase().includes(q)
+        );
+        renderSessions(filtered);
       }
 
       function escapeHtml(text) {
@@ -225,6 +268,10 @@
           alert("Error deleting session: " + error.message);
         }
       }
+
+      document.getElementById("search").addEventListener("input", (e) => {
+        filterSessions(e.target.value);
+      });
 
       loadSessions();
     </script>
